fix(styles): allow to wrap flex content in the header

--- a/src/layout/header-layout/header-layout.module.css
+++ b/src/layout/header-layout/header-layout.module.css
@@ -1,6 +1,8 @@
 .header {
   display: flex;
+  flex-wrap: wrap;
   gap: 10px;
   justify-content: center;
+
   padding: 10px;
 }
